--- a/fitgenius/src/index.css
+++ b/fitgenius/src/index.css
@@ -19,7 +19,7 @@ a {
 body{
     margin:0px;
     padding: 0px;
-    background-color: #000000;
+    /* background-color: #000000; */
     font-family: 'Lato', sans-serif;
 }
 *{
@@ -48,7 +48,8 @@ input{
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('./images/banner.png');
+    background-color: #000000;
+    /* background-image: url('./images/banner.png'); */
     position: relative;
     z-index: 0;
 }
