--- a/fitgenius/src/index.css
+++ b/fitgenius/src/index.css
@@ -19,7 +19,7 @@ a {
 body{
     margin:0px;
     padding: 0px;
-    /* background-color: #000000; */
+    background-color: #000000;
     font-family: 'Lato', sans-serif;
 }
 *{
@@ -44,7 +44,7 @@ input{
 }
 #main{
     width:100%;
-    height:980px;
+    height:1080px;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -56,9 +56,9 @@ input{
 #main::before{
     position: absolute;
     content: "";
-    background: -moz-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
+    /* background: -moz-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
     background: -webkit-radial-gradient(center, ellipse cover, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
-    background: radial-gradient(ellipse at center, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%);
+    background: radial-gradient(ellipse at center, rgba(181, 8, 8, 0.38) 0%, rgba(0, 0, 0, 0.6) 100%); */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#61b50808', endColorstr='#99000000',GradientType=1 );
     top: 0;
     left: 0;
@@ -621,3 +621,73 @@ nav .menu-btn,
                 height:400px;
             }
         }
+
+        /* Dropdown Styling */
+.dropdown {
+    position: relative;
+}
+
+.dropdown-toggle {
+    background: none;
+    border: none;
+    font-size: inherit;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 10px 22px;
+    text-transform: uppercase;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #000000;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    top: 40px;
+    left: 0;
+    width: 250px;
+    z-index: 10;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.8);
+    transition: all 0.3s ease-in-out;
+}
+
+/* Show dropdown when it's active (state-controlled) */
+.dropdown-menu li {
+    width: 100%;
+}
+
+.dropdown-menu li a {
+    display: block;
+    padding: ;
+    text-align: left;
+    color: #ffffff;
+    font-size: 0.6rem;
+    background-color: #000000;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    transition: background 0.2s ease-in-out;
+}
+
+.dropdown-menu li a:hover {
+    background-color: #FF1414;
+    color: #ffffff;
+}
+
+/* When dropdown is toggled, show the menu */
+.dropdown .dropdown-menu {
+    display: block;
+}
+
+/* Responsive Dropdown */
+@media (max-width: 970px) {
+    .dropdown-menu {
+        position: static;
+        box-shadow: none;
+        width: 100%;
+        padding-left: 20px;
+    }
+
+    .dropdown-menu li a {
+        padding: 10px;
+    }
+}
